// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/image-picker/demo/accept.md correctly 1`] = `
<div>
  <div
    class="am-image-picker"
  >
    <div
      class="am-image-picker-list"
      role="group"
    >
      <div
        class="am-flexbox am-flexbox-align-center"
      >
        <div
          class="am-flexbox-item"
        >
          <div
            class="am-image-picker-item"
          >
            <div
              aria-label="Click and Remove this image"
              class="am-image-picker-item-remove"
              role="button"
            />
            <div
              aria-label="Image can be clicked"
              class="am-image-picker-item-content"
              role="button"
              style="background-image:url(\\"https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg\\");transform:rotate(0deg)"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        >
          <div
            class="am-image-picker-item"
          >
            <div
              aria-label="Click and Remove this image"
              class="am-image-picker-item-remove"
              role="button"
            />
            <div
              aria-label="Image can be clicked"
              class="am-image-picker-item-content"
              role="button"
              style="background-image:url(\\"https://zos.alipayobjects.com/rmsportal/hqQWgTXdrlmVVYi.jpeg\\");transform:rotate(0deg)"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        >
          <div
            aria-label="Choose and add image"
            class="am-image-picker-item am-image-picker-upload-btn"
            role="button"
          >
            <input
              accept="image/gif,image/jpeg,image/jpg,image/png"
              type="file"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/image-picker/demo/basic.md correctly 1`] = `
<div
  class="am-wingblank am-wingblank-lg"
>
  <div
    class="am-segment"
    role="tablist"
  >
    <div
      aria-disabled="false"
      aria-selected="true"
      class="am-segment-item am-segment-item-selected"
      role="tab"
      style="color:#fff;background-color:;border-color:"
    >
      <div
        class="am-segment-item-inner"
      />
      切换到单选
    </div>
    <div
      aria-disabled="false"
      aria-selected="false"
      class="am-segment-item"
      role="tab"
      style="color:;background-color:transparent;border-color:"
    >
      <div
        class="am-segment-item-inner"
      />
      切换到多选
    </div>
  </div>
  <div
    class="am-image-picker"
  >
    <div
      class="am-image-picker-list"
      role="group"
    >
      <div
        class="am-flexbox am-flexbox-align-center"
      >
        <div
          class="am-flexbox-item"
        >
          <div
            class="am-image-picker-item"
          >
            <div
              aria-label="Click and Remove this image"
              class="am-image-picker-item-remove"
              role="button"
            />
            <div
              aria-label="Image can be clicked"
              class="am-image-picker-item-content"
              role="button"
              style="background-image:url(\\"https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg\\");transform:rotate(0deg)"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        >
          <div
            class="am-image-picker-item"
          >
            <div
              aria-label="Click and Remove this image"
              class="am-image-picker-item-remove"
              role="button"
            />
            <div
              aria-label="Image can be clicked"
              class="am-image-picker-item-content"
              role="button"
              style="background-image:url(\\"https://zos.alipayobjects.com/rmsportal/hqQWgTXdrlmVVYi.jpeg\\");transform:rotate(0deg)"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        >
          <div
            aria-label="Choose and add image"
            class="am-image-picker-item am-image-picker-upload-btn"
            role="button"
          >
            <input
              accept="image/*"
              type="file"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/image-picker/demo/custom.md correctly 1`] = `
<div>
  <div
    class="am-image-picker"
  >
    <div
      class="am-image-picker-list"
      role="group"
    >
      <div
        class="am-flexbox am-flexbox-align-center"
      >
        <div
          class="am-flexbox-item"
        >
          <div
            class="am-image-picker-item"
          >
            <div
              aria-label="Click and Remove this image"
              class="am-image-picker-item-remove"
              role="button"
            />
            <div
              aria-label="Image can be clicked"
              class="am-image-picker-item-content"
              role="button"
              style="background-image:url(\\"https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg\\");transform:rotate(0deg)"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        >
          <div
            class="am-image-picker-item"
          >
            <div
              aria-label="Click and Remove this image"
              class="am-image-picker-item-remove"
              role="button"
            />
            <div
              aria-label="Image can be clicked"
              class="am-image-picker-item-content"
              role="button"
              style="background-image:url(\\"https://zos.alipayobjects.com/rmsportal/hqQWgTXdrlmVVYi.jpeg\\");transform:rotate(0deg)"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        >
          <div
            aria-label="Choose and add image"
            class="am-image-picker-item am-image-picker-upload-btn"
            role="button"
          >
            <input
              accept="image/*"
              type="file"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/image-picker/demo/length.md correctly 1`] = `
<div>
  <div
    class="am-image-picker"
  >
    <div
      class="am-image-picker-list"
      role="group"
    >
      <div
        class="am-flexbox am-flexbox-align-center"
      >
        <div
          class="am-flexbox-item"
        >
          <div
            class="am-image-picker-item"
          >
            <div
              aria-label="Image can be clicked"
              class="am-image-picker-item-content"
              role="button"
              style="background-image:url(\\"https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg\\");transform:rotate(0deg)"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        >
          <div
            class="am-image-picker-item"
          >
            <div
              aria-label="Image can be clicked"
              class="am-image-picker-item-content"
              role="button"
              style="background-image:url(\\"https://zos.alipayobjects.com/rmsportal/hqQWgTXdrlmVVYi.jpeg\\");transform:rotate(0deg)"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        >
          <div
            aria-label="Choose and add image"
            class="am-image-picker-item am-image-picker-upload-btn"
            role="button"
          >
            <input
              accept="image/*"
              type="file"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        />
        <div
          class="am-flexbox-item"
        />
        <div
          class="am-flexbox-item"
        />
      </div>
    </div>
  </div>
</div>
`;
